--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="coin " id="coin">
-                <div class="heads" >
+                <div class="heads " >
                     <img src="./Heads.jpg" alt="">
                 </div>
                 <div class="tails ">
@@ -26,9 +26,11 @@
 
                 </div>
             </div>
+            <div class="result" ><h2></h2></div>
                 <div class="button-container">
-                    <button id="filpcoin" onclick="flipCoin()">Flip coin</button>
-                    <button id="reset" onclick="reset()">Reset</button>
+                    
+                    <button id="filpcoin" onclick ="flipCoin()" >Flip coin</button>
+                    <button id="reset"onclick ="reset()">Reset</button>
                 </div>
 
            
